ajuste retirada metas globais indicadores de projeto;